fix: drop down spacing and filter button on mobile

--- a/app/javascript/stylesheets/navigation/navigation.scss
+++ b/app/javascript/stylesheets/navigation/navigation.scss
@@ -127,7 +127,7 @@
         top: var(--nav-height);
 
         .nav__link-wrapper {
-            margin: 0;
+            margin-block: var(--spacer-md);
             width: 100%;
             height: auto;
         }
